# boost.mpi_cmake_icpc

./: CMakeLists.txt  README.txt  main.cpp
